--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
   <title>PuntoSafa</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header class="text-white">
+    <!-- contenido del header -->
+  </header>
   <app-root></app-root>
+  <footer class="text-white">
+    <!-- contenido del footer -->
+  </footer>
 </body>
 </html>
