--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-
   <meta charset="utf-8">
   <title>PuntoSafa</title>
   <base href="/">
@@ -10,12 +9,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="text-white">
-    <!-- contenido del header -->
-  </header>
-  <app-root></app-root>
-  <footer class="text-white">
-    <!-- contenido del footer -->
-  </footer>
+<app-root></app-root>
 </body>
 </html>
